--- a/arch/mips/configs/gcw0-qemu_defconfig
+++ b/arch/mips/configs/gcw0-qemu_defconfig
@@ -3,12 +3,12 @@ CONFIG_CPU_LITTLE_ENDIAN=y
 CONFIG_CPU_MIPS32_R2=y
 CONFIG_FORCE_MAX_ZONEORDER=14
 # CONFIG_COMPACTION is not set
-# CONFIG_CROSS_MEMORY_ATTACH is not set
 CONFIG_PREEMPT_VOLUNTARY=y
 # CONFIG_SECCOMP is not set
 CONFIG_LOCALVERSION="-dingux"
 CONFIG_DEFAULT_HOSTNAME="gcw0-emu"
 CONFIG_SYSVIPC=y
+# CONFIG_CROSS_MEMORY_ATTACH is not set
 CONFIG_NO_HZ=y
 CONFIG_LOG_BUF_SHIFT=14
 CONFIG_BLK_DEV_INITRD=y
@@ -54,7 +54,6 @@ CONFIG_NETDEVICES=y
 # CONFIG_NET_VENDOR_ALTEON is not set
 # CONFIG_NET_VENDOR_AMD is not set
 # CONFIG_NET_VENDOR_ATHEROS is not set
-# CONFIG_NET_CADENCE is not set
 # CONFIG_NET_VENDOR_BROADCOM is not set
 # CONFIG_NET_VENDOR_BROCADE is not set
 # CONFIG_NET_VENDOR_CHELSIO is not set
@@ -88,7 +87,6 @@ CONFIG_E1000=y
 # CONFIG_NET_VENDOR_TOSHIBA is not set
 # CONFIG_NET_VENDOR_VIA is not set
 # CONFIG_NET_VENDOR_WIZNET is not set
-CONFIG_RTLWIFI=y
 CONFIG_RTL8192CU=y
 CONFIG_INPUT_POLLDEV=y
 # CONFIG_INPUT_MOUSEDEV_PSAUX is not set
@@ -100,7 +98,6 @@ CONFIG_INPUT_EVDEV=y
 CONFIG_INPUT_JOYSTICK=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_UINPUT=y
-CONFIG_VT_HW_CONSOLE_BINDING=y
 CONFIG_LEGACY_PTY_COUNT=2
 # CONFIG_DEVMEM is not set
 # CONFIG_DEVKMEM is not set
@@ -155,8 +152,6 @@ CONFIG_FB=y
 CONFIG_FB_CIRRUS=y
 # CONFIG_VGA_CONSOLE is not set
 CONFIG_FRAMEBUFFER_CONSOLE=y
-CONFIG_FONTS=y
-CONFIG_FONT_6x10=y
 CONFIG_SOUND=y
 CONFIG_SND=y
 # CONFIG_SND_SUPPORT_OLD_API is not set
@@ -165,16 +160,14 @@ CONFIG_SND_INTEL8X0=y
 # CONFIG_SND_MIPS is not set
 # CONFIG_SND_USB is not set
 CONFIG_SND_SOC=y
-# CONFIG_USB_HID is not set
 CONFIG_USB=y
-CONFIG_USB_SUSPEND=y
 CONFIG_USB_OTG=y
 # CONFIG_USB_OTG_WHITELIST is not set
 CONFIG_USB_OHCI_HCD=y
+CONFIG_USB_UHCI_HCD=y
 CONFIG_USB_GADGET=y
 CONFIG_USB_ETH=y
 CONFIG_MMC=y
-CONFIG_MMC_UNSAFE_RESUME=y
 # CONFIG_MMC_BLOCK_BOUNCE is not set
 CONFIG_RTC_CLASS=y
 # CONFIG_RTC_INTF_PROC is not set
@@ -195,6 +188,8 @@ CONFIG_NLS_UTF8=y
 # CONFIG_SCHED_DEBUG is not set
 # CONFIG_FTRACE is not set
 CONFIG_CMDLINE_BOOL=y
-CONFIG_CMDLINE="boot=/dev/sda2 loop0=/boot/rootfs.bin root=/dev/loop0 video=cirrusfb:320x240-16@60"
+CONFIG_CMDLINE="boot=/dev/sda loop0=/boot/rootfs.bin root=/dev/loop0 video=cirrusfb:320x240-16@60"
 # CONFIG_CRYPTO_ANSI_CPRNG is not set
 # CONFIG_CRYPTO_HW is not set
+CONFIG_FONTS=y
+CONFIG_FONT_6x10=y
